@@ -39,8 +39,10 @@
 
 == {es} version 7.1.0
 
-Remove hard limit for maximum forecast interval and limit based on the time interval of data added
+* Remove hard limit for maximum forecast interval and limit based on the time interval of data added
 to the model. (See {pull}214[#214].)
+
+* Handle NaNs when detrending seasonal components. {ml-pull}408[#408]
 
 == {es} version 7.0.0-alpha1
 
